fix: adjust alignment and padding in file upload component for improved layout

--- a/images/php/laravel/public/assets/all.css
+++ b/images/php/laravel/public/assets/all.css
@@ -7853,7 +7853,7 @@ h6 {
 .carga-archivo-govco .loader-carga-archivo-govco {
   margin-bottom: 0.438rem;
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   flex-wrap: wrap;
   row-gap: 0.625rem;
 }
